OGM-1340 fix build of 'core' module for JDK9 (#14)